--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "prop-types": "latest",
+    "rc-queue-anim": "^1.8.3",
+    "rc-texty": "^0.2.0",
+    "rc-tween-one": "^2.6.8",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
