--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.0.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "connected-react-router": "^6.7.0",
     "customize-cra": "^0.9.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
